// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fab /> <Action /> [snapshot] is loaded with the default props 1`] = `
<button
  class="rtf--ab"
  type="button"
>
  +
</button>
`;

exports[`<Fab /> <MB /> [snapshot] is loaded with default props 1`] = `
<button
  class="rtf--mb"
  type="button"
>
  +
</button>
`;
